# LaGrille

./: README.md  Untitled-2.cpp  main  main.cpp  main.out  probleme_10_a.txt  probleme_10_b.txt  probleme_12_a.txt  probleme_4_a.txt  probleme_4_b.txt  probleme_6_b.txt  probleme_6_c.txt  probleme_8_a.txt  probleme_8_b.txt  probleme_8_c.txt  récupération_donnée
Instances/: competition_01.txt  competition_02.txt  competition_03.txt  competition_04.txt  competition_05.txt  competition_06.txt  competition_07.txt  competition_08.txt  competition_09.txt  competition_10.txt  competition_11.txt  competition_12.txt  exemple_1.txt  probleme_10_c.txt  probleme_12_b.txt
Problemes/: probleme_12_c.txt  probleme_4_c.txt  probleme_6_a.txt  test.txt
Solutions/: Nouveau document texte.txt  exemple_1.txt  solution_1.txt  solution_10_a.txt  solution_12_a.txt  solution_3.txt  solution_4_a_2.txt  solution_4_a_3.txt  solution_4_a_4.txt  solution_4_a_5.txt  solution_4_b.txt  solution_4_b_2.txt  solution_4_c_2.txt  solution_6_a.txt  solution_6_a_2.txt
programme/: CMakeLists.txt  algo.cpp  algo.h  algo2.cpp  algo2.h  autre.cpp  autre.h  common.h  main.cpp  main2.cpp  quicksort.cpp  quicksort.h  score.cpp  score.h  scorematrice.cpp  scorematrice.h  structure.cpp  structure.h
site/: application.html  bilan.html  déroulement.html  groupe.html  read-me.html  ressources.html  sujet.html
solutions/: competition_03.txt  competition_06.txt  competition_08.txt  competition_09.txt  competition_11.txt  sortie_01.txt  sortie_02.txt  sortie_04.txt  sortie_05.txt  sortie_07.txt  sortie_10.txt  (+1 more)
(+6 files in other folders)
